# fememulator

./: .gitignore  00README  CMakeLists.txt  FEMBasicTriggerAlgo.cxx  FEMBasicTriggerAlgo.h  FEMBeamTriggerAlgo.cxx  FEMBeamTriggerAlgo.h  FEMBeamTriggerConstants.h  FEMBeamTriggerTypes.h  FEMInterface.cxx  FEMInterface.h  GNUmakefile  LArLiteInterface.cxx  LArLiteInterface.h  LinkDef.h  configure.sh  configure_gpvm.sh  example_daq_config.fcl  run_fememu.py
FEMBeamTrigger/: CMakeLists.txt  FEMBeamTriggerAlgo.cxx  FEMBeamTriggerAlgo.h  FEMBeamTriggerConfig.h  FEMBeamTriggerConstants.h  FEMBeamTriggerOutput.h  FEMBeamTriggerTypes.h  LinkDef.h  TriggerAlgoBase.h  TriggerAlgoTypes.h  TriggerConfigBase.h  TriggerOutputBase.h
LArLiteApp/: CMakeLists.txt  GNUmakefile  LArLiteInterface.cxx  LArLiteInterface.h  LinkDef.h  SWTriggerAna.cxx  SWTriggerAna.h
PassTrigger/: CMakeLists.txt
SWTriggerBase/: AlgoBase.cxx  AlgoBase.h  AlgoFactory.cxx  AlgoFactory.h  CMakeLists.txt  ConfigHolder.cxx  ConfigHolder.h  ConfigHolder.impl  FEMBeamTriggerTypes.h  LinkDef.h  MultiAlgo.cxx  MultiAlgo.h  PrescaleAlgo.cxx  PrescaleAlgo.h  Result.h  SWTriggerTypes.h  TriggerException.h  Watch.h
TriggerDAQApp/: CMakeLists.txt  DAQFileInterface.cxx  DAQFileInterface.h  LinkDef.h  UtilFunc.cxx  UtilFunc.h
UBEventTriggerMap/: CMakeLists.txt  UBEventTriggerMap.cxx  UBEventTriggerMap.h  UBEventTriggerTypes.h
python/: DAQTestStand_Run000_EmuDebug.ipynb  DAQTestStand_Run000_EmuDebug2.ipynb  Platform_Run000_EmuDebug.ipynb  bnb.cfg  debug_fememu.py  debug_teststand.cfg  debug_teststand.py  default.cfg  effCurve.py  effCurve_daqapp.py  fememu_pycfg.py  run_andy_run.py  run_daqapp.py  run_fememu.py  run_ll.py  singlep.cfg  test.py  teststand_15Jan2016.cfg  ubdaq_20min_test_18Jan2016_run4558.cfg  validate_swtrigs.py
test/: GNUmakefile  print_swtrigs.cc  test_app.cc  validate_swtrigs.cc
ups/: swtrigger.table
